--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "roughly",
-  "version": "1.0.0",
-  "description": "",
-  "source": "index.ts",
+  "name": "@fromdl/roughly",
+  "version": "0.1.0",
+  "description": "Find out what time it is, roughly",
+  "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "module": "dist/index.module.js",
   "unpkg": "dist/index.umd.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "microbundle",
     "dev": "microbundle watch",
